# transfer_matrix

./: .gitconfig  .nbinteract.json  0_demo_interactive_optical_reflectance_transmittance_with_transfer_matrix.ipynb  LICENSE  README.md  demo_minimal.ipynb  demo_with_full_notebook.ipynb  optical_reflectance_transmittance_with_transfer_matrix_widget.ipynb  pyproject.toml  requirements.txt
.config/configstore/: update-notifier-npm.json
.local/share/jupyter/runtime/: nbserver-1-open.html  nbserver-1.json  notebook_cookie_secret
dev/: 00_draft.ipynb  cal_func.py  demo_draft.ipynb  widgets_func.py
test_files/: optical_reflectance_transmittance_with_transfer_matrix_test_nbinteract.html  optical_reflectance_transmittance_with_transfer_matrix_widget.html  test_nbinteract.html  test_nbinteract.ipynb  test_nbinteract_transfer_matrix.html  test_nbinteract_transfer_matrix.ipynb
